fix(tag): add noTruncation prop which removes label max width

--- a/src/components/reusable/tag/tag.scss
+++ b/src/components/reusable/tag/tag.scss
@@ -22,6 +22,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 104px;
+
+  &.no-truncation {
+    max-width: none;
+  }
 }
 
 .tag-close-btn {
